# XMLemental

./: LICENSE  README.md  pyproject.toml  template_remove_and_insert.ipynb
base/: XMLelemental.py  XMLelemental_v2.py  __init__.py
